Added full CRUD on contact
